--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -336,6 +336,7 @@ h1 {
 .card img {
     width: 100%;
     height: 250px;
+    border-radius: 12px;
     object-fit: cover;
     border-bottom: 3px solid #008D11;
     transition: transform 0.4s ease;
